Fix logic for addItemsBefore and itemsAfterCollapse

--- a/packages/nys-breadcrumbs/src/nys-breadcrumbs.scss
+++ b/packages/nys-breadcrumbs/src/nys-breadcrumbs.scss
@@ -49,6 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: var(--_nys-breadcrumbs-gap);
     list-style: none;
   }
